--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,20 @@
             "role": "Developer"
         }
     ],
+    {
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/salvaterol/filament-torchlight"
+        }
+    ],
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
         "illuminate/contracts": "^11.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "torchlight/torchlight-laravel": "^0.5.13"
+        "torchlight/torchlight-laravel": "^0.5.13",
+        "salvaterol/filament-torchlight": "dev-main"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
