--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "filament/filament": "^3.0",
         "illuminate/contracts": "^11.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "torchlight/torchlight-laravel": "^0.5.13",
+        "torchlight/torchlight-laravel": "^0.5.13"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
